[gd_scene load_steps=10 format=3 uid="uid://c4p760k7oplg1"]

[ext_resource type="Script" uid="uid://d2eaqbfwh4hxq" path="res://Scripts/Runtime/Utilities/CommonUtility.gd" id="1_nd3sc"]
[ext_resource type="PackedScene" uid="uid://cjvvwuuxusdk0" path="res://Scripts/Runtime/[MyProject]/DI/DependencyInjection.tscn" id="2_7b7pc"]
[ext_resource type="PackedScene" uid="uid://c7gfwd3jkij6r" path="res://Scripts/Runtime/[MyProject]/Views/GameView.tscn" id="3_2bspb"]
[ext_resource type="Script" uid="uid://dks4jdanr477d" path="res://Scripts/Runtime/[MyProject]/Controllers/GameController.gd" id="4_s7dku"]
[ext_resource type="PackedScene" uid="uid://c72waw0txbxl1" path="res://Scripts/Runtime/[MyProject]/Entities/PlayerCharacter.tscn" id="5_fxlpm"]
[ext_resource type="PackedScene" path="res://Levels/Level01_Stone/Level01_Stone.tscn" id="6_a0aop"]

[sub_resource type="Sky" id="Sky_c3lgb"]

[sub_resource type="Environment" id="Environment_c3lgb"]
background_color = Color(0.09727488, 0.26412714, 0.3848848, 1)
sky = SubResource("Sky_c3lgb")

[sub_resource type="CameraAttributesPhysical" id="CameraAttributesPhysical_t0q61"]

[node name="GameScene" type="Node3D"]
script = ExtResource("1_nd3sc")

[node name="Common" type="Node3D" parent="."]

[node name="DependencyInjection" parent="Common" instance=ExtResource("2_7b7pc")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 17.749878, 0)

[node name="WorldEnvironment" type="WorldEnvironment" parent="Common"]
environment = SubResource("Environment_c3lgb")
camera_attributes = SubResource("CameraAttributesPhysical_t0q61")

[node name="Lights" type="Node3D" parent="Common"]

[node name="KeyLight" type="DirectionalLight3D" parent="Common/Lights"]
transform = Transform3D(0.8498927, -0.14966355, 0.5052557, -0.21361786, 0.7786511, 0.58997446, -0.4817156, -0.6093466, 0.62979907, 8.126732, 10, 9.957886)
light_energy = 0.7
shadow_enabled = true

[node name="FillLight" type="DirectionalLight3D" parent="Common/Lights"]
transform = Transform3D(0.8021823, 0.16957968, -0.57249135, 0.3199135, 0.6875044, 0.65191495, 0.50414187, -0.7061024, 0.49725297, -7.531941, 10, 9.957886)
shadow_enabled = true

[node name="BackLight" type="DirectionalLight3D" parent="Common/Lights"]
transform = Transform3D(-0.8844915, 0.13250919, -0.4473435, -0.18768793, 0.77675694, 0.6011841, 0.42713952, 0.6157031, -0.6621645, -7.531941, 10, -13.824814)
light_energy = 0.2
shadow_enabled = true

[node name="Camera3D" type="Camera3D" parent="Common"]
transform = Transform3D(1, 0, 0, 0, 0.9156626, 0.40194777, 0, -0.40194777, 0.9156626, 0, 7.1304016, 18.887604)
fov = 23.3

[node name="GameView" parent="." instance=ExtResource("3_2bspb")]

[node name="GameController" type="Node3D" parent="." node_paths=PackedStringArray("playerCharacter", "gameView")]
script = ExtResource("4_s7dku")
playerCharacter = NodePath("../PlayerCharacter")
gameView = NodePath("../GameView")
metadata/_custom_type_script = "uid://dks4jdanr477d"

[node name="PlayerCharacter" parent="." instance=ExtResource("5_fxlpm")]

[node name="Level" parent="." instance=ExtResource("6_a0aop")]
